[package]
name = "hdd_checker_v5"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = "0.8"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
hostname = "0.4.0"
walkdir = "2.5.0"
native-dialog = "0.7.0"

[profile.release]
lto = true
strip = true